<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GrapeBhumi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_welcome">Welcome!</string>
    <string name="signup_enter_name">Enter your name</string>
    <string name="signup_enter_phone">Enter your mobile number</string>
    <string name="enter_mail">Enter your Email</string>
    <string name="signup_enter_pass">Enter password</string>
    <string name="signup_confirm_pass">Confirm password</string>
    <string name="signup_address">Enter address</string>
    <string name="btn_signup">Sign Up</string>
    <string name="signup_or">OR</string>
    <string name="signup_alreadyhaveacc">Already have an account?</string>
    <string name="signup_with">Sign in with</string>
    <string name="signup">Sign In</string>
    <string name="signin_welcomeback">Welcome Back!</string>
    <string name="signin_enter_mail">Enter your Email</string>
    <string name="signin_enter_pass">Enter password</string>
    <string name="btn_signin">Sign In</string>
    <string name="signin_forgot_pass">Forgot Password?</string>
    <string name="signin_or">OR</string>
    <string name="signin_donthaveacc">Don\'t have an account?</string>
    <string name="signin_with">Sign Up with</string>
    <string name="signin">Sign Up</string>
    <string name="requirement_title">Requirements</string>
    <string name="disease_title">Disease Information</string>
    <string name="disease_blackrot">Black Rot Disease</string>
    <string name="disease_downey">Downy Mildew Disease</string>
    <string name="disease_esca">Esca Disease</string>
    <string name="disease_leafblight">Leaf Blight Disease</string>
    <string name="disease_powdery">Powdery Mildew Disease</string>
    <string name="disease_healthy">Healthy Grape</string>
    <string name="txt_logo_name">Grape Bhumi</string>
    <string name="txt_home">Home</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_others">Others</string>
    <string name="txt_share">Share</string>
    <string name="txt_privacypolicy">Privacy Policy</string>
    <string name="txt_termscondictions">Terms &amp; conditions</string>
    <string name="txt_aboutus">About Us</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_btnav_home">Home</string>
    <string name="txt_btnav_cropcare">Crop Care</string>
    <string name="txt_btnav_videos">Videos</string>
    <string name="txt_btnav_weather">Weather</string>
    <string name="txt_btnav_advice">Advisory</string>
    <string name="txt_full_name">Full name</string>
    <string name="hint_name">Alex John</string>
    <string name="txt_mobile_number">Mobile Number</string>
    <string name="hint_mobile_number">9876543210</string>
    <string name="txt_state">State</string>
    <string name="txt_district">District</string>
    <string name="txt_taluka">Taluka</string>
    <string name="txt_village">Village</string>
    <string name="txt_save_profile">Save Profile</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="import_img">Import your image using camera</string>
    <string name="check_output">Output is: </string>
    <string name="related_info">Check Precautions</string>
    <string name="info_title">Disease Information</string>
    <string name="bul_blackrot">\u2022  Black Rot Disease</string>
    <string name="bul_downey">\u2022  Downy Mildew Disease</string>
    <string name="bul_esca">\u2022  Esca Disease</string>
    <string name="bul_leafblight">\u2022  Leaf Blight Disease</string>
    <string name="bul_powdery">\u2022  Powdery Mildew Disease</string>
    <string name="related_info_para">
        \t\t\tGrape constitutes one of the most widely grown fruit crop in the India. Over one third of world are employed in agriculture and the quantity is gradually falling because the financial losses of the farmers. One of the causes behind this momentary loss is the shortage for era in agriculture.
        \n\n\t\t\tGrape disease has become one of the major concerns for farmers and has now evolved into a significant threat to the quality of food consumed by the people. Hence, it becomes necessary to identify these diseases at the early stages of their growth and find possible solutions to avoid them.
        \n\n\t\t\tGrape suffers from enormous loss due to the various leaf diseases like:
    </string>
    <string name="symptoms">Symptoms:</string>
    <string name="precautions">Precautions:</string>
    <string name="oc_title">Organic Control:</string>
    <string name="cc_titel">Chemical Control:</string>
    <string name="downy_confirm_title">Confirm the diagnosis:</string>
    <string name="blackrot_title">Black Rot Disease</string>
    <string name="blackrot_info">\t\tBlack rot, caused by the fungus Guignardia bidwellii, is the most serious disease grapes in Tennessee. Precautions must be taken to protect grape plantings from this disease. The black rot fungus can attack many plant parts, including the leaves, shoots, flowers, tendrils, and fruit. The most damaging aspects of black rot are rotting of the berries and loss of leaves.
    </string>
    <string name="blackrot_confirm">\u2022 Small brown spots on young leaves.\n\u2022 Larger gray and dry patches.\n\u2022 Patches fall out and create hole in leaf.\n\u2022 Stems and shoots are also affected.\n\u2022 Ashy gray spots with brown margins on fruit.</string>
    <string name="leafblight_title">Leaf Blight Disease</string>
    <string name="leafblight_info">\t\tIt appears in the month of June and December. The disease attacks both leaves and fruits. Small yellowish spots first appear along the leaf margins, which gradually enlarge and turn into brownish patches with concentric rings. Severe infection leads to drying and defoliation of leaves. Symptoms in the form of dark brown-purplish patches appear on the infected berries, rachis and bunch stalk just below its attachment with the shoots.
    </string>
    <string name="leafblight_symptomslist" tools:ignore="StringEscaping">\u2022The pathogen only attacks leaves. At early stages of the disease, the leaves of infected vines develop faint, chlorotic spots, more marked on lower leaf blade. \n\u2022 As they grow in size during the season, irregular brown flecks develop in the center of the yellow spots, conferring them an angular appearance and making them more visible. \n\u2022 The symptoms may extend to the rest of the leaf, which eventually turns yellow and dies. \n\u2022 As the disease progresses, it can cause extensive defoliation by the end of the season. \n\u2022 The shortage of leaves results in reduced plant vigor and yield as well as a lesser quality of the grapes.
    </string>
    <string name="leafblight_take_precautions">\u2022 If available in the area, use more tolerant or resistant vine varieties. \n\u2022 Check the vineyard frequently for signs of the disease. \n\u2022 Keep vines healthy through a good fertilization program. \n\u2022 Avoiding excess late-season fertilizing. \n\u2022 Remove nearby wild muscadine vines around vineyards. \n\u2022 Prune the canopy cover so that it allows for good aeration of the foliage. \n\u2022 Keep field clean of plant residues after harvest.
    </string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_text1">GrapeBhumi built the Grape Bhumi app as a Free app. This SERVICE is provided by GrapeBhumi at no cost and is intended for use as is. \nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. \nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. \nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Grape Bhumi unless otherwise defined in this Privacy Policy.
    </string>
    <string name="privacy_head2">Information Collection and Use</string>
    <string name="privacy_text2">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way. \nThe app does use third-party services that may collect information used to identify you. \nLink to the privacy policy of third-party service providers used by the app \n\u2022 Google Play Services \n\u2022 Google Analytics for Firebase</string>
    <string name="privacy_head4">Cookies</string>
    <string name="privacy_text4">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. \nThis Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. </string>
    <string name="privacy_head5">Service Providers</string>
    <string name="privacy_text5">I may employ third-party companies and individuals due to the following reasons: \n\u2022 To facilitate our Service; \n\u2022 To provide the Service on our behalf; \n\u2022 To perform Service-related services; or \n\u2022 To assist us in analysing how our Service is used. \nI want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacy_head6">Security</string>
    <string name="privacy_text6">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="privacy_head7">Links to Other Sites</string>
    <string name="privacy_text7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_head8">Changes to This Privacy Policy</string>
    <string name="privacy_text8" tools:ignore="TypographyDashes">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. \nThis policy is effective as of 2030-12-31</string>
    <string name="privacy_head9">Contact Us</string>
    <string name="privacy_text9">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at grapebhumi@gmail.com.</string>
</resources>