<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentPrivacyPolicy"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700">
        <ImageButton
            android:id="@+id/backArrowId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="SpeakableTextPresentCheck"
            app:tint="@color/white"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_title"
            android:layout_toEndOf="@+id/backArrowId"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/font_regular"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text1"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text2"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head4"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text4"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text5"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head6"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text6"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head7"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text7"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text8"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_head9"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text9"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:justificationMode="inter_word"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>