<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RelatedInfoActivity"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700">
        <ImageButton
            android:id="@+id/backArrowId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="SpeakableTextPresentCheck"
            app:tint="@color/white"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:layout_toEndOf="@+id/backArrowId"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/font_regular"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related_info_para"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d_blackrot"
                android:text="@string/bul_blackrot"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d_downy"
                android:text="@string/bul_downey"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d_esca"
                android:text="@string/bul_esca"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d_leafblight"
                android:text="@string/bul_leafblight"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d_powdery"
                android:text="@string/bul_powdery"
                android:fontFamily="@font/font_regular"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/diseases"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>