<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/display_pic2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/grape_farmer1"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/display_txt3"
        android:layout_below="@+id/display_pic2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_welcomeback"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/font_regular"
        android:textSize="30sp"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mailLayout"
        android:layout_below="@id/display_txt3"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/teal_700">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mailEditText"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/font_regular"
            android:hint="@string/signin_enter_mail"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passLayout"
        android:layout_below="@id/mailLayout"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Design.TextInputLayout"
        app:boxStrokeColor="@color/teal_700">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passEditText"
            android:autofillHints="password"
            android:fontFamily="@font/font_regular"
            android:hint="@string/signup_enter_pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_forgot_pass"
            android:textColor="@color/teal_700"
            android:layout_gravity="end"
            android:fontFamily="@font/font_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signinBtn"
        android:layout_below="@id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:background="@color/teal_700"
        android:fontFamily="@font/font_regular"
        android:text="@string/btn_signin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="10dp"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:id="@+id/exist_acc"
        android:layout_below="@+id/signinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_donthaveacc"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/font_regular"
        android:layout_marginHorizontal="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupBtn"
        android:layout_below="@id/exist_acc"
        android:text="@string/btn_signup"
        android:layout_marginHorizontal="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/teal_700"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/font_regular"/>
    <ProgressBar
        android:id="@+id/progressbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:elevation="10dp"/>

</RelativeLayout>